创建头部组件

--- a/desk/src/assets/style/index.scss
+++ b/desk/src/assets/style/index.scss
@@ -5,7 +5,7 @@ $--WindowHeaderHeight:55px;
     height: $--WindowHeaderHeight;
     /* position: fixed;
     top: 0; */
-    background-color: black;
+    background-color: #9478ff;
     display: flex;
     align-items: center;
   }
